2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb: Fixed Bug 362887 -
	  Paste command pastes text to the wrong location.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs:
	  Added some tests for the insert tab behavior.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb: Fixed insert/remove
	  indent (Bug 362896 - Unindent action leaves selection in a weird state).

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/DocumentTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/DocumentTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/CaretMoveTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertNewLineTests.cs:
	  Worked on text editor unit tests.

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, Mono.TextEditor.mdp: Fixed assembly references.

2008-02-19  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Added key bindings for
	  control+shift+up/down. In OnLeaveNotifyEvent, reset the cursor only when
	  the mouse is really leaving the window.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/Segment.cs,
	  Mono.TextEditor/LineSegment.cs: Fixed some warnings.

2008-02-19  Mike Krüger <mkrueger@novell.com> 
